<resources>
    <string name="app_name">VCARE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="log_in">Đăng nhập</string>
    <string name="sign_up">Đăng kí</string>
    <string name="password">Mật khẩu</string>
    <string name="phone_number_user_name">Số điện thoại/ Tên người dùng</string>
    <string name="success">Thành công</string>
    <string name="save_account">Lưu tài khoản</string>
    <string name="no_network_please_reconnect">Lỗi mạng\nHãy kết nối lại</string>
    <string name="address">Địa chỉ:</string>
    <string name="identity_number">Số căn cước:</string>
    <string name="gender">Giới tính:</string>
    <string name="full_name">Họ tên:</string>
    <string name="social_insurance_number">Số BHXH:</string>
    <string name="email">Email</string>
    <string name="phone">Điện thoại</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="password_and_confirm_password_not_same">Lỗi: 2 mật khẩu không trùng nhau.</string>
    <string name="error_unknown">Lỗi: Không xác định</string>
    <string name="save">Lưu</string>
    <string name="cancel">Huỷ</string>
    <string name="nam">Nam</string>
    <string name="nu">Nu</string>
    <string name="dat_kham">Đặt khám</string>
    <string name="thoigiandatlichkham">Thời gian khám</string>
    <string name="chonlichkham">Chọn ngày khám</string>
    <string name="chonthoigiankham">Chọn thời gian khám</string>
    <string name="gioihan_thoigian_datlich">Lưu ý: Thời gian làm việc từ 7 giờ đến 12 giờ, 13 giờ đến 17 giờ</string>
    <string name="logout">Đăng xuất</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="history">
        Lịch sử khám
    </string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="home">Trang chủ</string>
    <string name="booking">Đặt khám</string>
    <string name="notification">Thông báo</string>
    <string name="personal">Cá nhân</string>
    <string name="search">Tìm kiếm...</string>
    <string name="day_of_birth">Ngày sinh:</string>
    <string name="status">Trạng thái: </string>
    <string name="paid_type">Loại trả phí: </string>
    <string name="paid_fee">Phí: </string>
    <string name="hospital"> Bệnh viện: </string>
    <string name="information">Thông tin: </string>
    <string name="department">Khoa: </string>
    <string name="doctor">Bác sĩ: </string>
    <string name="external_code">Mã khám: </string>
    <string name="serial">Số thứ tự: </string>
    <string name="examination_time">Thời gian khám (Dự kiến): </string>
    <string name="re_examination_time">Thời gian tái khám (Dự kiến): </string>
    <string name="period_examination_time">Khám định kì (Tháng): </string>
    <string name="detail_appointment_title">Thông tin</string>
    <string name="health_status_information">Tình trạng sức khoẻ</string>
    <string name="edit_health_status_information">Chỉnh sửa tình trạng sức khoẻ</string>
    <string name="ok">OK</string>
    <string name="symptom">Triệu chứng: </string>
    <string name="symptom_input">Nhập triệu chứng: </string>
    <string name="note">Chú thích</string>
    <string name="medicine">Thuốc: </string>
    <string name="conclusion">Kết luận: </string>
    <string name="sos">SOS</string>
    <string name="call">Gọi điện</string>
    <string name="qr">QR</string>
    <string name="phone_call_permission_denied">Hãy cho phép quyền được gọi để chúng tôi có thể tạo ra cuộc gọi lúc khẩn cấp.</string>
    <string name="location_permission_denied">Hãy cho phép quyền được gọi để chúng tôi có thể tìm được bệnh viện gần nhất với bạn.</string>
    <string name="gallery_permission_denied">Hãy cho phép quyền được truy cập vào thư viện để chúng tôi có thể cập nhật ảnh của bạn.</string>
    <string name="notification_permission_denied">Hãy cho phép quyền được thông báo để chúng tôi có thể thông báo cho bạn những thông tin cần thiết.</string>
    <string name="list_used_service">Các loại khám</string>
    <string name="back_to_home">Về màn hình chính</string>
    <string name="back">Trở lại</string>
    <string name="add_specific_time">Thêm thời gian cụ thể</string>
    <string name="pick_appointment_note">* Hệ thống sẽ tự động đặt thời gian sớm nhất cho bạn.</string>
    <string name="height">Chiều cao (cm)</string>
    <string name="weight">Cân nặng (kg)</string>
    <string name="blood_type">Nhóm máu</string>
    <string name="blood_pressure">Huyết áp</string>
    <string name="confirm">Xác nhận</string>
    <string name="patient_profile">Hồ sơ bệnh án</string>
    <string name="add_patient_profile">Thêm hồ sơ bệnh án</string>
    <string name="empty_patient_profile">Mục rỗng, hãy thêm mới.</string>
    <string name="patien_profile_upload_introduction">Chọn 1 trong 2 cách để tải dữ liệu lên trên máy chủ.</string>
    <string name="use_image">Sử dụng ảnh</string>
    <string name="use_url">Sử dụng đường dẫn</string>
    <string name="email_if">Email (nếu có)</string>
</resources>