<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="appointmentFlow"
            type="com.example.vcare_app.data.repository.AppointmentFlow" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".present.booking.appointment.AppointmentFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_background_screen">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Đặt lịch khám"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <TextView
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@{appointmentFlow.department_name}"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/symptom"/>
                <EditText
                    android:textColor="@color/black"
                    android:id="@+id/symptom_input"
                    android:layout_marginTop="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey"
                    android:hint="@string/symptom_input"/>
            </LinearLayout>


            <TextView
                android:layout_marginTop="24dp"
                android:textColor="@color/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gioihan_thoigian_datlich" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/pick_appointment_note"
                android:textColor="@color/error"/>

            <LinearLayout
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chonlichkham" />

                <androidx.appcompat.widget.AppCompatButton
                    android:textColor="@color/black"
                    android:id="@+id/date_picker_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/button_item_bg" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_add_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_specific_time"
                android:textColor="@color/error"
                android:buttonTint="@color/error"
                />

            <LinearLayout
                android:id="@+id/pick_period_layout"
                android:visibility="gone"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chonthoigiankham" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:id="@+id/pick_period_spinner"/>

            </LinearLayout>

            <TextView
                android:id="@+id/errorTv"
                android:textColor="@color/error"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatButton
                android:visibility="gone"
                android:id="@+id/btn_dat_kham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/app_button_background_clicked"
                android:text="@string/dat_kham"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</layout>