<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profile"
            type="com.example.vcare_app.api.api_model.response.Profile" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            tools:context=".present.personal.editpersonal.EditPersonalFragment">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_personal_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                getImage="@{profile.avatar}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/edit_avatar_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/button_item_bg"
                android:src="@drawable/edit_icon"
                app:layout_constraintBottom_toBottomOf="@+id/edit_personal_avatar"
                app:layout_constraintEnd_toEndOf="@+id/edit_personal_avatar"
                app:layout_constraintTop_toTopOf="@+id/edit_personal_avatar"
                app:layout_constraintVertical_bias="1.0" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_personal_avatar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginLeft="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{profile.email}"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone" />

                    <TextView
                        android:id="@+id/edit_phone"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@{profile.phone}"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name" />

                    <EditText
                        android:textColor="@color/black"
                        android:layout_marginLeft="12dp"
                        android:id="@+id/edit_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{profile.fullName}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/identity_number" />

                    <EditText
                        android:textColor="@color/black"
                        android:layout_marginLeft="12dp"
                        android:id="@+id/edit_identity_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{profile.identityNumber}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_insurance_number"
android:textColor="@color/black"
                        />

                    <EditText
                        android:textColor="@color/black"
                        android:layout_marginLeft="12dp"
                        android:id="@+id/edit_sin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{profile.socialInsuranceNumber}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />

                    <EditText
                        android:textColor="@color/black"
                        android:layout_marginLeft="12dp"
                        android:id="@+id/edit_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{profile.address}" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/edit_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_nam"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{profile.gender}"
                        android:text="@string/nam" />

                    <RadioButton
                        android:id="@+id/radio_nu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{!profile.gender}"
                        android:text="@string/nu" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day_of_birth" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_marginLeft="12dp"
                        android:id="@+id/edit_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_item_bg"
                        android:text="@{profile.dob}" />
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/app_button_background_clicked"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_item_bg"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_update_user" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>