<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="currentHealthStatus"
            type="com.example.vcare_app.api.api_model.HealthStatus" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".present.personal.edithealthstatus.EditHealthStatusFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_background_screen"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_big_title_size" />


                <TextView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_information_size"
                    app:drawableLeftCompat="@drawable/back_icon" />
            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/text_small_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/black" />

                <EditText
                    android:textAlignment="center"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_small_title_size"
                    android:id="@+id/edit_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/button_item_bg"
                    android:padding="8dp"
                    android:text="@{String.valueOf(currentHealthStatus.height)}"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/text_small_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/black" />

                <EditText
                    android:textAlignment="center"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_small_title_size"
                    android:id="@+id/edit_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/button_item_bg"
                    android:padding="8dp"
                    android:text="@{String.valueOf(currentHealthStatus.weight)}"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/text_small_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_type"
                    android:textColor="@color/black" />

                <EditText
                    android:textAlignment="center"
                    android:textSize="@dimen/text_small_title_size"
                    android:id="@+id/edit_bloodType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/button_item_bg"
                    android:padding="8dp"
                    android:text="@{currentHealthStatus.bloodType}"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/text_small_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_pressure"
                    android:textColor="@color/black" />

                <EditText
                    android:textAlignment="center"
                    android:textSize="@dimen/text_small_title_size"
                    android:id="@+id/edit_bloodPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/button_item_bg"
                    android:padding="8dp"
                    android:text="@{currentHealthStatus.bloodPressure}"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/app_button_background_clicked"
            android:paddingHorizontal="56dp"
            android:text="@string/confirm"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>